Server/fix deprecated code references